Partial fix to the background scroll gap
Changed the background layer animations from transform: translate to
background-position. This does eliminate the gap between loops, but
creates a jump effect instead.

Set the animation length to 10 minutes, so there should only be one jump
every ten minutes.

The animation change does affect the apparent background speed, so this
may need to be adjusted in future commits.

--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,7 @@ h2 {
   position: absolute;
   background: url("../img/main_bg.png") repeat-x;
   height:550px;
-  width:9000px;
+  width:12000px;
   animation-name: scrollBg;
   animation-duration:600s;
   animation-timing-function: linear;
@@ -141,7 +141,7 @@ h2 {
   position: absolute;
   background: url("../img/galaxy_layer.png") repeat-x;
   height:550px;
-  width:18000px;
+  width:6000px;
   animation-name: scrollGalaxy;
   animation-duration:600s;
   animation-timing-function: linear;
@@ -183,20 +183,14 @@ h2 {
 }
 
 @keyframes scrollBg {
-  from {
-      transform : translate(0,0);
-  }
-  to {
-      transform : translate(-30000px,0);
+  100%{
+    background-position: -6000px;
   }
 }
 
 @keyframes scrollGalaxy {
-  from {
-      transform : translate(0,0);
-  }
-  to {
-      transform : translate(-60000px,0);
+  100% {
+    background-position: -12000px;
   }
 }
 
